--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,6 @@
 title: "Practicals"
 ---
 
-This is a Quarto website.
+This is a Quarto website to display my practicals.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+Here is the link to my GitHub repository: https://github.com/Dominique-Chetty/Statistical-Computing-Practicals :)
